# robot-descriptions-dobot

./: .gitattributes  README.md
cr5_description/: Cartesian_Controllers.md  README.md
cr5_description/config/ocs2/: ft-90c.info  task.info
cr5_description/config/ros2_control/: AG2F90-C-Soft.yaml  ft-90c.yaml  ros2_controllers.yaml  vla39.yaml
cr5_description/config/rviz/: cr5.rviz  demo_ocs2.rviz
cr5_description/launch/: cartesian_motion_controller.launch.py  dobot_bringup_ros2.launch.py
cr5_description/meshes/collision/: Link1_0.stl  Link1_1.stl  Link2_0.stl  Link2_1.stl  Link2_2.stl  Link3_0.stl  Link3_1.stl  Link3_2.stl  Link4.stl  Link5.stl  Link6.stl  base_link.stl
cr5_description/meshes/visual/: Link1.mtl  Link2.mtl  Link4.mtl  Link5.mtl  Link6.mtl  base_link.mtl  ft_sensor.mtl
cr5_description/urdf/: cr5_ft-90c.urdf
cr5_description/xacro/: arm.xacro  dh_params.yaml  grippers.xacro  robot.xacro  tf_params.yaml
cr5_description/xacro/ros2_control/: interfaces.xacro  robot.xacro
cr5_dual_description/: CMakeLists.txt  README.md  package.xml
cr5_dual_description/config/ocs2/: left.info  task.info
cr5_dual_description/config/ros2_control/: empty.yaml  left_arm.yaml  ros2_controllers.yaml
cr5_dual_description/meshes/: base.mtl
cr5_dual_description/urdf/: cr5_dual.urdf  cr5_dual_AG2F90-c.urdf
cr5_dual_description/xacro/: grippers.xacro  robot.xacro
cr5_dual_description/xacro/ros2_control/: robot.xacro
