<package format="2">
  <name>cr5_dual_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for CR5 Dual Arm Workstation</p>
    <p>This package contains configuration data, 3D models and launch files
      for a dual-arm workstation equipped with two Dobot CR5 collaborative robot arms
    </p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com"/>
  <license>BSD</license>

  <exec_depend>robot_common_launch</exec_depend>
  <depend>cr5_description</depend>
  <depend>changingtek_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
